bunch of projects

--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -34,12 +34,12 @@
 
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
-		<h1 id="jobtitle">Inclass Projects</h1>
+		<h1 id="jobtitle">Class Projects</h1>
 		<p class="lead float-right" id="date">2012-2014</p>
 		<p class="lead" id="company">McMaster University</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>Studying in Woburn C.I. and McMaster University has given me many opportunities to work on projects relevant to Engineering. Through these I have learned about the proper process required to build a system according to the specification. Some relevant projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive.</p>
+			<p>Studying at Woburn C.I. and McMaster University has provided me with numerous opportunities to engage in engineering-related projects. Through these experiences, I have gained insight into the proper processes necessary for constructing systems in accordance with specifications. Some of the relevant projects I have participated in include building an Analog to Digital Converter and designing the internal gearing for a CD Drive.</p>
 		</div>
 	</div>
 
@@ -48,7 +48,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>Analog to Digital Converter</h2>
-		  		<p>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments MultiSim. Once the simulations were successful, the circuit was constructed on a breadboard using a <a href="http://www.ni.com/mydaq/">myDAQ</a> to provide the signal and read the feedback by the computer.</p>
+				<p>The most recent class project I worked on involved designing and constructing an analog-to-digital converter using electrical components. The board was designed and simulated using National Instruments MultiSim. After achieving successful simulations, the circuit was implemented on a breadboard, with a <a href="http://www.ni.com/mydaq/">myDAQ</a> used to supply the signal and facilitate computer-based feedback reading.				</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="Project Class.jpg" width="100%">
@@ -71,7 +71,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>CD Drive</h2>
-		  		<p>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and MapleSim. Once the design was validated, a prototype was manufactured on a RepRap 3D printer and tested. The project helped me learn a lot about the modeling and simulation capabilities of MapleSim.</p>
+				<p>Similarly, I have been involved in projects focused on designing and manufacturing mechanical parts for a CD Drive. The simulation and design phase of this particular project was carried out using Autodesk Inventor and MapleSim. After validating the design, a prototype was manufactured using a RepRap 3D printer and subsequently subjected to testing. This project provided valuable insights into the modeling and simulation capabilities of MapleSim.				</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="render.jpg" width="100%">
