--- a/Projects/F1/index.html
+++ b/Projects/F1/index.html
@@ -39,7 +39,7 @@
 		<p class="lead" id="company">Woburn C.I.</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>This was the one of the most challenging competitions in terms of coordinating resources between team members. I was a part of the only collaboration team in the regional competition. This meant that students from different schools all collaborated to work as a single team. This posed a challenge as unlike most teams it was difficult for us to host regular meetings to communicate the team’s progress. This hurdle was overcome by dividing the work into 3 rolls. These were manufacturing, marketing and outreach. The team agreed to collaborate on the overall design of the F1 car as it was the most important part of the competition.</p>
+			<p>This was one of the most challenging competitions in terms of coordinating resources among team members. I was part of the only collaborative team in the regional competition. This meant that students from different schools collaborated to work as a single team. This posed a challenge because, unlike most teams, it was difficult for us to host regular meetings to communicate the team’s progress. This hurdle was overcome by dividing the work into three roles: manufacturing, marketing, and outreach. The team agreed to collaborate on the overall design of the F1 car, as it was the most important part of the competition.</p>
 		</div>
 	</div>
 
@@ -48,8 +48,8 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>Design</h2>
-		  		<p>The car was modeled to have a larger body than  most F1 cars. It was a designed based on the Boxy Fish that had one of the  lowest drag coefficients in fish. As can be seen in Figure 6, the shape of the  body reduced the low pressure zone behind the f1 car. This low pressure was  also further reduced through a hole at eh bottom of the car. This can be  indicated by the green (reduced low pressure) marks in the wind tunnel result. <br>
-            	For more information Please <a href="http://velocitaracing.weebly.com/"> visit our website </a></p>
+				<p>The car was modeled to have a larger body than most F1 cars. It was designed based on the Boxy Fish, which had one of the lowest drag coefficients among fish. As can be seen in Figure 6, the shape of the body reduced the low-pressure zone behind the F1 car. This low pressure was further diminished through a hole at the bottom of the car. This is indicated by the green (reduced low pressure) markers in the wind tunnel results.</p>
+            	
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="image057.gif" width="100%">
@@ -58,6 +58,7 @@
 		</div>
 	</div>
 	<div name="" class="container" id="Reflection">
+		<p>For more information Please <a href="http://velocitaracing.weebly.com/"> visit our website </a></p>
 		<iframe src="http://velocitaracing.weebly.com/" height="700px" width="100%"></iframe>
 	</div>
 	
