--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -39,7 +39,7 @@
 		<p class="lead" id="company">Woburn C.I.</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>Founded by Dean Kamen, FIRST stands for For Inspiration and Recognition of Science and Technology. The aim of the organisation is to increase interest in Science Technology Engineering and Mathematics (STEM) education. FIRST achieves its goals by hosting several international competitions for students of different age groups. I have competed in two of the 4 levels of competition, The First Tech Challenge (FTC) and the First Robotics Competition (FRC).</p>
+			<p>Founded by Dean Kamen, <a hrep="https://www.firstinspires.org/">FIRST</a> stands for "For Inspiration and Recognition of Science and Technology." The aim of the organization was to increase interest in Science, Technology, Engineering, and Mathematics (STEM) education. FIRST achieved its goals by hosting several international competitions for students of different age groups. I competed in two of the four levels of competition, The First Tech Challenge (FTC) and the First Robotics Competition (FRC).</p>
 		</div>
 	</div>
 
@@ -48,7 +48,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>Blizzard XIII (2012)</h2>
-		  		<p>This was my senior year in robotics and I was appointed the role of president of the team by my fellow team mates and mentors. This meant that I had the responsibility to manage the progress of all the sub-teams and their side projects. I also had to ensure that all of the team’s progress was being conveyed to the rest of the team as well as the mentors. Furthermore I had a major role in the designing and manufacturing process of the robot.</p>
+				<p> In my senior year of robotics, I was appointed as the president of the team by my fellow teammates and mentors. This role entailed managing the progress of all the sub-teams and their side projects. I was also responsible for ensuring that the team's progress was effectively communicated within the team and to the mentors. Additionally, I played a significant role in the design and manufacturing of the robot.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="2012robot.jpg" width="100%">
@@ -65,8 +65,8 @@
 		    <div class="col-sm">
 		    	<div id="ksa">
 					<p>
-						The primary frame this year was built entirely out of sheet metal. This allowed the team to outsource a lot of the manufacturing. Our laser cutting sponsor sablemetals was able to deliver the parts in a fraction of the time it would normally take us to produce it. We saved further weight in the assembly by using rivets instead of bolts. This also prevented failure due to the bolts in the frame coming loose. <br>
-						For the shooter I decided to use a wooden fixed hood turret. The fixed hoot allowed there to be less moving parts and reducing the complexity of the turret. To vary the distance of the shot, the velocity of the ball was varied by controlling the speed of the motors. They were controlled through a PID feedback loop that allowed the flywheel to quickly get to speed.
+						This year, the body of the robot was constructed entirely from sheet metal, which allowed us to outsource a substantial portion of the manufacturing process. Our laser cutting sponsor, Sablemetals, delivered the parts much faster than our usual production timeline. To further reduce weight in the assembly, we opted for rivets instead of bolts, preventing any issues related to loosening bolts in the frame.
+						For the shooter mechanism, I chose to implement a wooden fixed hood turret to minimize moving parts and simplify the turret's complexity. To adjust the shot's distance, we varied the ball's velocity by controlling the motor speed. This control was achieved through a PID feedback loop, enabling the flywheel to reach the desired speed rapidly.
 					</p>
 				</div>
 		    </div>
@@ -74,7 +74,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>Blizzard XII (2011)</h2>
-		  		<p>The challenge this year was to pick up and raise inflatable tubes about 6 feet above the ground. For bonus points the robot had to deploy a mini robot that raced against other mini robots. The most challenging part of the competition was accurately the deployment of the mini-bot. To do this the robot used an additional control system, pneumatics. I was responsible for making and maintaining the pneumatic systems on the robot.</p>
+				<p>The challenge in this particular year's competition involved picking up and raising inflatable tubes to a height of about 6 feet above the ground. For bonus points, the robot had to deploy a mini robot that competed against other mini robots. The most demanding aspect of the competition was accurately deploying the mini-bot, which required an additional control system: pneumatics. I was responsible for designing and maintaining the pneumatic systems on the robot.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="2011robot.jpg" width="100%">
@@ -92,9 +92,9 @@
 		    <div class="col-sm">
 		    	<div id="ksa">
 					<p>
-						The onboard pneumatics allowed us to use a pneumatically actuated shifting gearbox. This allowed the robot to shift from 7 Ft/s to 14 Ft/s. This allows the robot to push others around in low gear as well as race past others in high gear. The shifting gearbox gave us a competitive advantage especially when it was time to deploy the mini-bot.<br>
-						The overall design was based on the basic design of some of the robots that I had built in VEX. The robot had an A-frame with a claw. The claw was designed to instantly hold any tube on contact. This was done by using touch sensors to trigger and stop the intake action of the robot. The Rollers on the claw had a surface speed of 20 Ft/s which is much faster than the speed the robot drives at. This allows the pickup to still work when the robot drives at full speed. <br> 
-						During the design process we make 2 robots. The first is a prototype and is used to practice when the final robot is being shipped to the competition. The second robot is the final robot that gets built for competition. This robot incorporates all of the changes that we found necessary from the first robot.
+						The onboard pneumatics allowed us to implement a pneumatically actuated shifting gearbox, enabling the robot to switch between 7 Ft/s and 14 Ft/s. This flexibility allowed the robot to maneuver effectively in both low and high gears, providing a competitive edge, especially during the mini-bot deployment phase.
+						The overall robot design was based on the fundamental concepts of some of the robots I had previously built in VEX competitions. The robot featured an A-frame structure with a claw designed to instantly grip any tube upon contact. Touch sensors were used to trigger and stop the intake action of the robot. The rollers on the claw had a surface speed of 20 Ft/s, much faster than the robot's driving speed, ensuring efficient tube pickup even at full speed.
+						During the design process, we created two robots. The first served as a prototype for practice purposes while the final robot was being prepared for competition. The second robot incorporated all the necessary changes and improvements identified during the testing of the first prototype.
 					</p>
 				</div>
 		    </div>
@@ -102,9 +102,10 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>Blizzard XI (2010)</h2>
-			  		<p>The aim for this year’s competition was to make robots play soccer. At a high school level it would be extremely difficult to make robots that run and kick a soccer ball so the rules were modified a little. <br>
-		        	This particular robot used mecanum wheels to give the robot added manoeuvrability. The additional axis of freedom helped justify the significantly lower grip as well as the cost of replacing these fragile wheels more often than a standard rough top rubber tread. <br>
-	        	</p>
+				<p>
+					In this year's competition, the goal was to have robots play soccer. Given the challenges of creating robots that could effectively run and kick a soccer ball at a high school level, the rules were modified to accommodate the limitations.
+					This specific robot was equipped with mecanum wheels to enhance its maneuverability. The additional axis of freedom provided by these wheels justified the trade-off of lower grip and the need for more frequent replacement compared to standard rough top rubber treads.
+				</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="2010robot.jpg" width="100%">
@@ -122,11 +123,10 @@
 		    <div class="col-sm">
 		    	<div id="ksa">
 					<p>
-						This particular robot used mecanum wheels to give the robot added manoeuvrability. The additional axis of freedom helped justify the significantly lower grip as well as the cost of replacing these fragile wheels more often than a standard rough top rubber treed. <br>
-						The green and red rollers were a part of the ball control mechanism that gripped onto a small section of the ball to prevent it from rolling away. Behind the Bosch we used a spring loaded Bosch kicker that is subject to 200lbs of force. This kicker is manipulated though a dog gearbox that takes advantage of the anti-drive back technology in DeWalt drills. <br>
-						During this particular year I learned a lot about how essential it is to pick the right material to build certain parts of the robot. Due to a lack of understand of stress, we used unnecessary amounts of box tubing to make the frame of the robot. This resulted in added weight that pushed the robot over the 120lb weight limit specified by the rules. <br>
-						I also found that it is important to look into the lifetime of every part and what maintenance work will be required. While working in the pits I found that the front rollers often needed to be replaced and cleaned. Furthermore the wheels that we used also needed to be changed every regional. Changing the wheels was extremely expensive and time consuming. <br>
-						This year the team again qualified for the world championships by winning the most prestigious award in the regional, the chairmen's award. This award is given out to the team that has created the most influential presence in their community by raising awareness and interest for science and technology.
+						The green and red rollers were crucial components of the ball control mechanism, designed to securely grip a small section of the ball to prevent it from rolling away. Behind the Bosch, we incorporated a spring-loaded Bosch kicker capable of exerting 200 lbs of force. This kicker was operated through a dog gearbox, leveraging the anti-drive back technology found in DeWalt drills.
+						Throughout this year, I gained valuable insights into the importance of selecting the right materials for specific robot components. Due to a lack of understanding of stress factors, we ended up using excessive amounts of box tubing for the robot's frame, resulting in unnecessary weight that pushed the robot over the 120 lb weight limit stipulated by the rules.
+						I also learned the significance of assessing the lifespan of each part and planning for necessary maintenance. While working in the pits, I observed that the front rollers often required replacement and cleaning. Additionally, the wheels we used needed to be changed before every regional event, which proved to be both costly and time-consuming.
+						This year, our team once again qualified for the world championships by earning the most prestigious award in the regional competition, the Chairman's Award. This award recognized our team's outstanding efforts in creating a significant presence within our community, raising awareness and interest in the field of science and technology.
 					</p>
 				</div>
 		    </div>
@@ -136,9 +136,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>Blizzard X (2009)</h2>
-			  		<p>
-        				This was my first year in FIRST Robotics Competition. This particular competition truly captured by attention because of the size of the robots and the scale of the competition. At this point I could visualise robots performing real life tasks and assisting humans as opposed to being small toys designed to fight each other. As a rookie I quickly learned how to manufacture raw materials to specifications and learned the basics of robotic design. The seniors on my team became my mentors and I was able to quickly learn as well as contribute to the design of the robot. That year I was responsible for overseeing the manufacturing and maintenance of the drivetrain of the robot.
-	        	</p>
+				<p>In my first year in the FIRST Robotics Competition, I was truly captivated by the scale and size of the robots and the grandeur of the competition. It was during this time that I could envision robots performing real-life tasks and assisting humans, moving beyond being mere toys designed for battles. As a rookie, I rapidly acquired skills in manufacturing raw materials to meet specifications and gained a fundamental understanding of robotic design. The senior members of my team served as mentors, allowing me to learn quickly and contribute to the robot's design. In that year, my responsibilities included overseeing the manufacturing and maintenance of the robot's drivetrain.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="2009robot.jpg" width="100%">
@@ -155,10 +153,7 @@
 		    </div>
 		    <div class="col-sm">
 		    	<div id="ksa">
-					<p>
-						The aim of the year’s competition was to have your robot score basketball sized balls into goals that were attached to the robots in the opposing team. This proved to be a challenge strategically because playing a purely offensive match made it easier for the opposing team to score. <br>
-						The competition was further made challenging by using a playing field made of lunar regaleph to simulate the low friction effects caused to the low gravity on the moon’s surface. To overcome this many teams attempted to use traction control systems on their robot. My team however found that we could increase traction by switching between static and rolling friction by pulsing the power supplied to the wheels.
-					</p>
+					<p>The objective of that year's competition was to have our robot score basketball-sized balls into goals attached to the opposing team's robots. This posed a strategic challenge, as focusing solely on offense made it easier for the opposing team to score. To further complicate matters, the competition field was designed to replicate lunar regolith, simulating the low friction experienced on the moon's surface. Many teams attempted to address this issue by implementing traction control systems on their robots. However, our team took a different approach and discovered that we could enhance traction by alternately applying static and rolling friction through pulsing the power supplied to the wheels.</p>
 				</div>
 		    </div>
 
