--- a/Projects/Skills/index.html
+++ b/Projects/Skills/index.html
@@ -39,7 +39,7 @@
 		<p class="lead" id="company">Woburn C.I.</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>The <a href="http://www.skillsontario.com/"> Skills Robotics Competition</a> was organised by the government of Ontario to help increase student interest in the skilled trades and robotics. The aim for this competition was to score balls into a fishing net attached behind and opposing robot. This was fortunate for me because I had experience building a robot for a similar competition in 2009. My team and I decided to use what we learned from the previous competition. However, a significantly lower budget made it a much larger challenge. Instead of using the high power CIM motors, we chose to use old DeWalt drills for the robot’s drivetrain.</p>
+			<p>The <a href="http://www.skillsontario.com/"> Skills Robotics Competition</a> was organized by the government of Ontario to help increase student interest in the skilled trades and robotics. The aim for this competition was to score balls into a fishing net attached behind and opposing robot. This was fortunate for me because I had experience building a robot for a similar competition in 2009. My team and I decided to use what we learned from the previous competition. However, a significantly lower budget made it a much larger challenge. Instead of using the high power CIM motors, we chose to use old DeWalt drills for the robot’s drivetrain.</p>
 		</div>
 	</div>
 
@@ -47,7 +47,7 @@
 		<div class="container">
 		  <div class="row">
 		  	<div class="col-sm">
-		  		<p>We choose to use a double wheel shooter to allow the robot to shoot the ball directly ahead. This helps make it easier to aim the robot when shooting the ball. Both rollers were individually driven. This keeps the assembly simple and in case one of the motor blows, the robot will still be able to eject the balls.</p>
+		  		<p>We chose to use a double wheel shooter to allow the robot to shoot the ball directly ahead. This helps make it easier to aim the robot when shooting the ball. Both rollers were individually driven. This keeps the assembly simple and in case one of the motor blows, the robot will still be able to eject the balls.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="image052.jpg" width="100%">
@@ -58,7 +58,7 @@
 				<img src="image053.jpg" width="100%">
 		    </div>
 		    <div class="col-sm">
-		    	<P>The final robot was a very fast machine. It was able to quickly pick up all the balls and put them into their designated goal. During the competition one of the plywood wheels begun to crack. That was easily fixed by using some wood glue. We learned to dedicate more financial resources to the drive system. Even for the short amount of time that the robot was immobile, the function worked well enough to get a couple of goals in. This was thanks to us designing the shooter to make full field shots.</P>
+		    	<P>The final robot was a very fast machine. It was able to quickly pick up all the balls and put them into their designated goal. During the competition one of the plywood wheels began to crack. That was easily fixed by using some wood glue. We learned to dedicate more financial resources to the drive system. Even for the short amount of time that the robot was immobile, the function worked well enough to get a couple of goals in. This was thanks to us designing the shooter to make full field shots.</P>
 		    </div>
 		  </div>
 		</div>
