--- a/Projects/VEX/index.html
+++ b/Projects/VEX/index.html
@@ -39,8 +39,11 @@
 		<p class="lead" id="company">Woburn C.I.</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>The Vex Robotics competition has always played an essential role in  developing my knowledge of mechanical systems. The Kit has different structural  components and parts that are easy to manufacture and manipulate. This makes  them a great tool for making proof of concept models. Participating in VEX  competitions also taught me a lot about structural support and eliminating  inefficiencies in the robot. <br>
-   	    	I have competed in the VEX robotics competition from 2008 to 2012. Furthermore  I have mentored younger students and taught them how to build more robust  machines. This was primarily done while I was a teaching assistant in the 11th  grade.</p>
+			<p>
+				The Vex Robotics competition always played an essential role in developing my knowledge of mechanical systems. The kit had various structural components and parts that were easy to manufacture and manipulate, making them great tools for creating proof-of-concept models. Participating in VEX competitions also taught me a lot about structural support and eliminating inefficiencies in the robot.
+
+				I competed in the VEX robotics competition from 2008 to 2012. Furthermore, I mentored younger students and taught them how to build more robust machines. This was primarily done while I was a teaching assistant in the 11th grade.
+			</p>
 		</div>
 	</div>
 
