--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 	<div name="Interests" class="container-fluid" id="Interests">
 		<div class="Title"><h1>Interests</h1></div>
 	</div>
-	<div class="divider" id="Interests-Projects"></div>
-	<div name="Projects" class="container-fluid" id="Projects">
+<!--	<div class="divider" id="Interests-Projects"></div>
+-->	<div name="Projects" class="container-fluid" id="Projects">
 		<div class="Title"><h1>Projects</h1></div>
 	</div>
     <div class="container-fluid" id="Bottom">
@@ -128,9 +128,7 @@
 			</div>
 			<div name="Credits" class="col-sm" id="Contact">
 				<h2>Credits</h2>
-				<p>
-					I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. I could not have accomplished any of what is listed above without the support of my family, teachers, mentors, and friends.
-				</p>
+				<p>I want to extend my heartfelt gratitude to the amazing individuals who have been instrumental in the creation of this website and the success of my projects. My family's unwavering support, my teachers' valuable guidance, my mentors' expertise, and my friends' collaborative spirit have all played a pivotal role. Their contributions, insights, and encouragement have not only made this journey possible but have also shaped my growth as a developer. I am deeply thankful and look forward to continuing this remarkable journey together, achieving new milestones and creating more meaningful projects.</p>
 			</div>
 		</div>
 	</div>
