--- a/Interests/first/index.html
+++ b/Interests/first/index.html
@@ -60,8 +60,8 @@
 			<p>
 				I absolutely love volunttering! It is a great way to get to connect with other people while doing some good in the community.
 				Over the past few years I have taken on many roles in the first community. from JR. FLL to FRC I work with kids in all the programs
-				that FIRST has to offer. It is absolutely amazing to watch these little kids develop and grow. They are all very smart and
-				often come up with very creative solutions to problems they encounter.
+				that FIRST has to offer. It is absolutely amazing to watch these little kids develop and grow. They are all extremely smart and
+				often come up with innovate solutions to problems they encounter.
 			</p>
 		</div>
 	</div>
@@ -88,7 +88,7 @@
 	<div id="student" class="block priority2">
 		<div>
 			<h1>Student</h1>
-			<p>I have essentially grown up in the first community. In my time year i have competed in FLL, FTC and FRC events and learned a
+			<p>I have essentially grown up in the first community. In my time year I have competed in FLL, FTC and FRC events and learned a
 				lot in the process. I have an indept look at my past experiences as a student in the <a href="https://www.prakhargarg.me/Projects/FIRST/index.html">project section.</a></p>
 		</div>
 	</div>
