change domain name

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -16,20 +16,20 @@
 	<title>Prakhar Garg | About Me</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://prakhargarg.me/assets/data/sitemap.js"></script>
+	<script src="https://prakhargarg.ca/assets/data/sitemap.js"></script>
 
 
 	<!-- Building the site -->
-	<script src="https://prakhargarg.me/HorizontalMenuBar/index.js"></script>
+	<script src="https://prakhargarg.ca/HorizontalMenuBar/index.js"></script>
 
 	<!-- Event Handlers -->
 
 	<!-- Styling -->
-	<link href="https://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="https://prakhargarg.me/adjustments.css" rel="stylesheet" type="text/css">
-	<link href="https://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.ca/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.ca/adjustments.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.ca/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="index.css" rel="stylesheet" type="text/css">
-	<script src="https://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
+	<script src="https://prakhargarg.ca/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
 
