--- a/Work/mcmasterRA/index.html
+++ b/Work/mcmasterRA/index.html
@@ -16,19 +16,19 @@
 	<title>Prakhar Garg | Research Asssistant</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://prakhargarg.me/assets/data/sitemap.js"></script>
+	<script src="https://prakhargarg.ca/assets/data/sitemap.js"></script>
 
 
 	<!-- Building the site -->
-	<script src="https://prakhargarg.me/HorizontalMenuBar/index.js"></script>
-	<script src="https://prakhargarg.me/populate.js"></script>
+	<script src="https://prakhargarg.ca/HorizontalMenuBar/index.js"></script>
+	<script src="https://prakhargarg.ca/populate.js"></script>
 
 	<!-- Event Handlers -->
 
 	<!-- Styling -->
-	<link href="https://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="https://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
-	<script src="https://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
+	<link href="https://prakhargarg.ca/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="https://prakhargarg.ca/bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="https://prakhargarg.ca/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
 
