change domain name

--- a/Interests/first/index.html
+++ b/Interests/first/index.html
@@ -89,7 +89,7 @@
 		<div>
 			<h1>Student</h1>
 			<p>I have essentially grown up in the first community. In my time year I have competed in FLL, FTC and FRC events and learned a
-				lot in the process. I have an indept look at my past experiences as a student in the <a href="https://www.prakhargarg.me/Projects/FIRST/index.html">project section.</a></p>
+				lot in the process. I have an indept look at my past experiences as a student in the <a href="https://www.prakhargarg.ca/Projects/FIRST/index.html">project section.</a></p>
 		</div>
 	</div>
 
